header almost done

--- a/index.html
+++ b/index.html
@@ -3,13 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
     <title>Sonido - DWA</title>
 </head>
 <body>
     <header>
-        <div>Navbar</div>
-        <div>Musica</div>
-        <div>Descripcion</div>
+        <div class="header-main">
+            <figure class="header-logo">
+                <img src="./img/Trazado 58.svg" alt="">
+            </figure>
+
+            <ul class="header-list">
+                <li>New</li>
+                <li>Musica</li>
+                <li>Eventos</li>
+                <li>Radio</li>
+            </ul>
+            
+
+        </div>
+        <div class="header-play">
+            <figure><img class="header-play-img" src="./img/Grupo 26.svg" alt=""></figure>
+            <ul class="header-play-list">
+                <li>Experimental</li>
+                <li>Alternativa</li>
+                <li>Electrónica</li>
+            </ul>
+        <div>
+            <p>Post</p>
+            <img src="./img/aditya-chinchure-ZhQCZjr9fHo-unsplash@2x.jpg" alt="Logo imagen">
+            <p>10 canciones</p>
+        </div>
+        </div>
+        <div>
+            <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit adipisci assumenda sequi, consequuntur natus saepe vitae, illum ad molestias officia cupiditate sint similique nostrum delectus necessitatibus laudantium eveniet modi illo.</p>
+            <div>
+                <p>Olistic</p>
+                <img src="./img/adrian-korte-5gn2soeAc40-unsplash@2x.jpg" alt="Logo imagen">
+                <p>15 canciones</p>
+            </div>
+        </div>
+        <figure>
+            <img src="./img/Grupo 9.svg" alt="">
+        </figure>
     </header>
     <section>
         Top Songs
