--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
 
     <title>Sonido - DWA</title>
 </head>
@@ -21,8 +21,11 @@
                 <li>Eventos</li>
                 <li>Radio</li>
             </ul>
+            <!-- <ul>
+                <li>Buscar</li>
+                <li>SingIn</li>
+            </ul> -->
             
-
         </div>
         <div class="header-play">
             <figure><img class="header-play-img" src="./img/Grupo 26.svg" alt=""></figure>
@@ -31,19 +34,26 @@
                 <li>Alternativa</li>
                 <li>Electrónica</li>
             </ul>
-        <div>
-            <p>Post</p>
+        <div class="header-disco">
+            <div class="header-disco-child">
+                <p class="disco-child-text">Post</p>
+                <p class="disco-child-text2">10 canciones</p>
+            </div>
             <img src="./img/aditya-chinchure-ZhQCZjr9fHo-unsplash@2x.jpg" alt="Logo imagen">
-            <p>10 canciones</p>
         </div>
         </div>
-        <div>
-            <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit adipisci assumenda sequi, consequuntur natus saepe vitae, illum ad molestias officia cupiditate sint similique nostrum delectus necessitatibus laudantium eveniet modi illo.</p>
-            <div>
-                <p>Olistic</p>
+
+        <div class="header-description">
+            <div class="header-description-text">
+                <h3>Lorem ipsum es simplemente un texto</h3>
+                <p>Ficticio de la industria de impresion y composicion tipografica. Lirem Ipsum ha sido el teto ficticio estandar de la industria desde el año 1500.</p>
+            </div>
+            <div class="header-foto-main">
                 <img src="./img/adrian-korte-5gn2soeAc40-unsplash@2x.jpg" alt="Logo imagen">
-                <p>15 canciones</p>
+                <div class="foto-main">
+                    <p class="foto-main1">Olistic</p>
+                    <p class="foto-main2">15 canciones</p>
+                </div>
             </div>
         </div>
         <figure>
