--- a/index.html
+++ b/index.html
@@ -189,12 +189,46 @@
         </div>
 
 
-    </section>
-    <section>
-        Nuevos álbumes
-    </section>
-    <section>
-        Calendario
+    </section >
+    
+    <section >
+       <div class="footer">
+           <div>
+              <img src="./img/michal-dolnik-bH8sQqdam5k-unsplash@2x.jpg" alt="">
+          </div>
+          <div class="footer-list">
+              <p>Mes</p>
+              <p>Año</p>
+          </div>
+       </div>
+       <div>
+           <div class="footer-item">
+               <p>5</p>
+               <div>
+                   <p>Viernes</p>
+                   <p>Agosto</p>
+               </div>
+               <img src="" alt="">
+               <div>
+                   <p>Paris</p>
+                   <p>Francia</p>
+               </div>
+               <button>Comprar</button>
+           </div>
+           <div class="footer-item">
+               <p>12</p>
+               <div>
+                   <p>Domingo</p>
+                   <p>Septiembre</p>
+               </div>
+               <img src="" alt="">
+               <div>
+                   <p>Bogota</p>
+                   <p>Colombia</p>
+               </div>
+               <button>Comprar</button>
+           </div>
+       </div>
     </section>
 
 </body>
